--- a/css/main.css
+++ b/css/main.css
@@ -185,18 +185,69 @@ clear: both;
 /*==========================================================================
                                 PCT TEAM EDITS
  ==========================================================================*/
-#nav.col-md{
-    text-decoration: none;
-}
 
 div#nav {
-    height: 50px;
-    font-size: 20px;
-    text-decoration: none;
+    font-size: 15px;
 }
+
+#nav, .navbar-header{
+    margin-top: 30px;
+}
+
 #nav.col-md div#nav a:link, a:hover {
     text-decoration: none !important;
 }
-#slides.col-md{
-	height: 300px;
+#menu{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    margin-bottom: -90px;
+}
+#slideShow{
+    position: relative;
+    margin-top: 105px;
+}
+h2{
+    margin: 0;
+    color: #666;
+    padding-top: 90px;
+    font-size: 52px;
+    font-family: "trebuchet ms", sans-serif;
+}
+.item{
+    background: #333;
+    text-align: center;
+    height: 400px !important;
+}
+.carousel{
+
+}
+/* Bump up size of carousel content */
+.carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+}
+
+
+/* Carousel base class */
+.carousel {
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+    z-index: 1;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+    height: 400px;
+    background-color:#555;
+}
+.carousel img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 600px;
 }
