--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,9 @@ clear: both;
 /*==========================================================================
                                 PCT TEAM EDITS
  ==========================================================================*/
+body{
+    background-color: #2ecc71;
+}
 
 div#nav {
     font-size: 15px;
@@ -195,12 +198,12 @@ div#nav {
 }
 
 .navbar{
-    height: 83px;
 }
 
 #nav.col-md div#nav a:link, a:hover {
     text-decoration: none !important;
 }
+
 #menu.col-md{
     top: 0;
     left: 0;
@@ -208,10 +211,12 @@ div#nav {
     z-index: 10;
     margin-bottom: -90px;
 }
+
 #slideShow{
     position: relative;
-    margin-top: 175px;
+    margin-top: 180px;
 }
+
 h2{
     margin: 0;
     color: #666;
@@ -219,14 +224,16 @@ h2{
     font-size: 52px;
     font-family: "trebuchet ms", sans-serif;
 }
+
 .item{
     background: #333;
     text-align: center;
     height: 400px !important;
 }
-.carousel{
 
+.carousel{
 }
+
 /* Bump up size of carousel content */
 .carousel-caption p {
     margin-bottom: 20px;
@@ -234,10 +241,10 @@ h2{
     line-height: 1.4;
 }
 
-
 /* Carousel base class */
 .carousel {
 }
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
     z-index: 1;
