--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,32 @@ h2{
     height: 600px;
 }
 
+
+#research_side_nav{
+    background-color: #888888;
+}
+#research_projects{
+}
+#nav_projects_outer{
+    padding: 40px;
+    margin-top: -50px;
+}
+#all_done
+{
+}
+
+#project_name h3{
+    float: left;
+}
+div#inner_projects {
+     padding: 30px;
+ }
+#all_done {
+    padding:0px;
+}
+#project_name h4{
+    float: right;
+}
 .footer-distributed {
     background-color: #292c2f;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
