--- a/css/main.css
+++ b/css/main.css
@@ -278,10 +278,18 @@ h2{
     padding: 40px;
     margin-top: -50px;
 }
+.alert_success{
+    margin: 0px;
+    padding: 0px;
+    height: 1px;
+}
 #all_done
 {
 }
-
+ledgend{
+float: right;
+    margin-top: 23px;
+}
 #project_name h3{
     float: left;
 }
@@ -293,6 +301,10 @@ div#inner_projects {
 }
 #project_name h4{
     float: right;
+}
+div#header_profiles {
+    position: relative;
+    margin-top: 70px;
 }
 .footer-distributed {
     background-color: #292c2f;
