--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,13 @@ h2 {
     height: 600px;
 }
 
+#Organization-and-Head{
+}
+
+#clearfix{
+    padding: 30px;
+}
+
 #research_side_nav {
     background-color: #888888;
 }
@@ -529,4 +536,16 @@ float: left;
 }
 /* <==================================================>*/
 /* <================= Events End ====================>*/
+/* <=================================================>*/
+
+
+/* <==================================================>*/
+/* <================= Students  ====================>*/
+/* <=================================================>*/
+#padd_student_view{
+    padding: 60px;
+    margin-top: 60px;
+}
+/* <==================================================>*/
+/* <================= Students End ====================>*/
 /* <=================================================>*/
