News & Events are changed working on Profile Edits

--- a/css/main.css
+++ b/css/main.css
@@ -372,6 +372,47 @@ div#img_gallery{
 /* <=============== Home Page End ====================>*/
 /* <=================================================>*/
 
+
+/* <==================================================>*/
+/* <=========== Teacher Profile Backend===============>*/
+/* <=================================================>*/
+
+#inner_row
+{
+    margin-top: 200px;
+}
+
+#first_row img
+{
+    width:170px;
+    height:156px;
+}
+
+#name_position_select select
+{
+    height: 32px;
+}
+
+#select_degree select
+{
+    height: 32px;
+    width: 145px;
+}
+
+#select_ending_year select
+{
+    height: 32px;
+    width: 145px;
+}
+/* <==================================================>*/
+/* <========== Teacher Profile Backend End ===========>*/
+/* <=================================================>*/
+
+
+
+
+
+
 /* <==================================================>*/
 /* <============== Projects Page =====================>*/
 /* <=================================================>*/
