--- a/css/main.css
+++ b/css/main.css
@@ -191,9 +191,32 @@ lyhidden.focusable:focus {
 /* <================== Home page ====================>*/
 /* <=================================================>*/
 .container {
-
+    
+    -webkit-box-shadow: 2px -5px 65px 14px rgba(0,0,0,0.34);
+    -moz-box-shadow: 2px -5px 65px 14px rgba(0,0,0,0.34);
+    box-shadow: 2px -5px 65px 14px rgba(0,0,0,0.34);
 }
 
+.inner_row
+{
+    margin: 15px;
+}
+.container-fluid{
+    -webkit-box-shadow: 2px -5px 65px 14px rgba(0,0,0,0.34);
+    -moz-box-shadow: 2px -5px 65px 14px rgba(0,0,0,0.34);
+    box-shadow: 2px -5px 65px 14px rgba(0,0,0,0.34);
+}
+.container
+{/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f3f3f3+50,ededed+51,ffffff+100;White+Gloss+%232 */
+    background: rgb(255,255,255); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(243,243,243,1) 50%, rgba(237,237,237,1) 51%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(243,243,243,1)), color-stop(51%,rgba(237,237,237,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+}
 #closeable-ofi {
 /*    height:50px; */
     overflow:hidden;
@@ -247,6 +270,18 @@ h2 {
     font-family: "trebuchet ms", sans-serif;
 }
 
+#slideShow, .carousel-inner img
+{
+    width:1185px;
+    max-height: 99%;
+}
+#myCarousel
+{
+ margin-left: 13px;
+}
+p, div {
+    font-family: 'Nobile', Helvetica, Arial, sans-serif;
+}
 /* Bump up size of carousel content */
 .carousel-caption p {
     margin-bottom: 20px;
@@ -356,22 +391,134 @@ div#img_gallery{
     margin-top: 30px;
 }
 
-
-.footer-distributed {
-    background-color: #292c2f;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    width: 100%;
-    text-align: left;
-    font: normal 16px sans-serif;
-    padding: 45px 50px;
-    margin-top: 80px;
-}
-
 /* <==================================================>*/
 /* <=============== Home Page End ====================>*/
 /* <=================================================>*/
 
+
+/*
+***               ****
+*** CPANEL VIEW   ****
+***               ****
+*/
+
+body {
+  background: #F1F3FA;
+}
+
+/* Profile container */
+.profile {
+  margin: 20px 0;
+}
+
+/* Profile sidebar */
+.profile-sidebar {
+  padding: 20px 0 10px 0;
+  background: #fff;
+}
+
+.profile-userpic img {
+  float: none;
+  margin: 0 auto;
+  width: 70%;
+  height: 60%;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  border-radius: 50% !important;
+}
+
+.profile-usertitle {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.profile-usertitle-name {
+  color: #5a7391;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 7px;
+}
+
+.profile-usertitle-job {
+  text-transform: uppercase;
+  color: #5b9bd1;
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.profile-userbuttons {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.profile-userbuttons .btn {
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  padding: 6px 15px;
+  margin-right: 5px;
+}
+
+.profile-userbuttons .btn:last-child {
+  margin-right: 0px;
+}
+    
+.profile-usermenu {
+  margin-top: 30px;
+}
+
+.profile-usermenu ul li {
+  border-bottom: 1px solid #f0f4f7;
+}
+
+.profile-usermenu ul li:last-child {
+  border-bottom: none;
+}
+
+.profile-usermenu ul li a {
+  color: #93a3b5;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.profile-usermenu ul li a i {
+  margin-right: 8px;
+  font-size: 14px;
+}
+
+.profile-usermenu ul li a:hover {
+  background-color: #fafcfd;
+  color: #5b9bd1;
+}
+
+.profile-usermenu ul li.active {
+  border-bottom: none;
+}
+
+.profile-usermenu ul li.active a {
+  color: #5b9bd1;
+  background-color: #f6f9fb;
+  border-left: 2px solid #5b9bd1;
+  margin-left: -2px;
+}
+
+/* Profile Content */
+.profile-content {
+  padding: 20px;
+  background: #fff;
+  min-height: 460px;
+}
+#admin_profile
+{
+    margin-top: 280px;
+}
+
+/*
+***               ****
+*** CPANEL END   ****
+***               ****
+*/
 
 /* <==================================================>*/
 /* <=========== Teacher Profile Backend===============>*/
@@ -468,161 +615,6 @@ ledgend {
 /* <=========== Projects page End ====================>*/
 /* <=================================================>*/
 
-
-/* <==================================================>*/
-/* <=========== Profile View Start ===================>*/
-/* <=================================================>*/
-.center-block {
-    float: none;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.input-group .icon-addon .form-control {
-    border-radius: 0;
-}
-
-.icon-addon {
-    position: relative;
-    color: #555;
-    display: block;
-}
-
-.icon-addon:after,
-.icon-addon:before {
-    display: table;
-    content: " ";
-}
-
-.icon-addon:after {
-    clear: both;
-}
-
-.icon-addon.addon-md .glyphicon,
-.icon-addon .glyphicon,
-.icon-addon.addon-md .fa,
-.icon-addon .fa {
-    position: absolute;
-    z-index: 2;
-    left: 10px;
-    font-size: 14px;
-    width: 20px;
-    margin-left: -2.5px;
-    text-align: center;
-    padding: 10px 0;
-    top: 1px
-}
-
-.icon-addon.addon-lg .form-control {
-    line-height: 1.33;
-    height: 46px;
-    font-size: 18px;
-    padding: 10px 16px 10px 40px;
-}
-
-.icon-addon.addon-sm .form-control {
-    height: 30px;
-    padding: 5px 10px 5px 28px;
-    font-size: 12px;
-    line-height: 1.5;
-}
-
-.icon-addon.addon-lg .fa,
-.icon-addon.addon-lg .glyphicon {
-    font-size: 18px;
-    margin-left: 0;
-    left: 11px;
-    top: 4px;
-}
-
-.icon-addon.addon-md .form-control,
-.icon-addon .form-control {
-    padding-left: 30px;
-    float: right;
-    font-weight: normal;
-}
-
-.icon-addon.addon-sm .fa,
-.icon-addon.addon-sm .glyphicon {
-    margin-left: 0;
-    font-size: 12px;
-    left: 5px;
-    top: -1px
-}
-
-.icon-addon .form-control:focus + .glyphicon,
-.icon-addon:hover .glyphicon,
-.icon-addon .form-control:focus + .fa,
-.icon-addon:hover .fa {
-    color: #2580db;
-}
-#header_profiles{
-    margin: 60px;
-    padding: 60px;
-}
-
-#sort_profile_op{
-float: left;
-}
-
-#id_bar{
-    float: right;
-}
-
-#profiles_view .col-md-3 {
-    background-color: #999999;
-    padding: 20px;
-    border: white solid 10px;
-}
-
-#profiles_view img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto
-}
-
-#profiles_view span{
-    text-align: center;
-}
-
-.caption {
-    display: block;
-}
-
-.flip-container {
-    margin: 50px;
-    perspective: 1000;
-    display: inline-block;
-}
-.flip-container:hover .card {
-    transform: rotateY(180deg);
-}
-.card, .front, .back {
-    width: 150px;
-    height: 150px;
-}
-.card {
-    transition: 0.5s;
-    transform-style: preserve-3d;
-    position: relative;
-}
-.front, .back {
-    backface-visibility: hidden;
-    position: absolute;
-}
-.front {
-    z-index: 1;
-    transform: rotateY(180deg);
-    background: no-repeat;
-}
-.back {
-    z-index: 2; /* back side, placed above front */
-    transform: rotateY(0deg);
-    background:  no-repeat;
-}
-/* <==================================================>*/
-/* <=========== Profile View End ====================>*/
-/* <=================================================>*/
 
 /* <==================================================>*/
 /* <==================== Profile ====================>*/
