--- a/css/assets/css/style.css
+++ b/css/assets/css/style.css
@@ -32,6 +32,10 @@ h3 {
 }
 
 img { max-width: 100%; }
+body
+{
+	background-image: url('Blue_Background_big_2048.png');
+}
 
 .medium-paragraph {
 	font-size: 18px;
@@ -191,6 +195,31 @@ ul.navbar-nav {
 	height: 100px;
 }
 input[type="password"], textarea, textarea.form-control
+{
+	    height: 50px;
+    margin: 0;
+    padding: 0 20px;
+    vertical-align: middle;
+    background: #f8f8f8;
+    border: 3px solid #ddd;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 50px;
+    color: lightgrey;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -o-transition: all .3s;
+    -moz-transition: all .3s;
+    -webkit-transition: all .3s;
+    -ms-transition: all .3s;
+    transition: all .3s;
+}
+input[type="email"], textarea, textarea.form-control
 {
 	    height: 50px;
     margin: 0;
