--- a/css/main.css
+++ b/css/main.css
@@ -741,3 +741,12 @@ ledgend {
 /* <==================================================>*/
 /* <================= Students End ====================>*/
 /* <=================================================>*/
+.infoTab {
+    background-color: #f7f7f7;
+    margin: 0 0 0 0;
+    padding: 20px;
+}
+.profile-sidebar h3
+{
+    text-align: center;
+}
